--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -30,12 +30,11 @@
     <%= f.label :expected_value %>
     <%= f.text_field :expected_value %>
   </div>
-
-  <div class="field">
-    <%= f.label :expected_value %>
-    <%= f.text_field :expected_value %>
-  </div>
-
+  
+ <div class="field">
+      <%= f.label :users %>
+      <%= f.collection_select :user_ids, User.all, :id, :email, {},  {:multiple => true, :class=>'select2'} %> 
+ <div>
   <div class="actions">
     <%= f.submit %>
   </div>
