--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,15 @@
     
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
-     <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>  
+     <% if user_signed_in? %>
+     	<div>
+           <div>Signed in as... <%= current_user.email %></div>
+       	   <%= link_to('Projects', projects_path) %>
+       	   <%= link_to('Sprints', sprints_path) %>
+           <%= link_to('Tasks', tasks_path) %>
+           <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
+     <% end %> 
+     </div>
     <%= yield %>
   </body>
 </html>
