adicionado select para modificar o projeto da sprint e para selecionar a sprint da task

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -7,12 +7,12 @@
 
 <p>
   <strong>Opening date:</strong>
-  <%= @project.opening_date %>
+  <%= @project.opening_date.strftime('%y/%m/%Y') %>
 </p>
 
 <p>
   <strong>Closing date:</strong>
-  <%= @project.closing_date %>
+  <%= @project.closing_date.strftime('%y/%m/%Y') %>
 </p>
 
 <p>
