--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -22,7 +22,7 @@
 
 <p>
   <strong>Sprint:</strong>
-  <%= @task.sprint %>
+  <%= @task.sprint.name %>
 </p>
 
 <%= link_to 'Edit', edit_task_path(@task) %> |
