--- a/app/views/sprints/show.html.erb
+++ b/app/views/sprints/show.html.erb
@@ -17,7 +17,7 @@
 
 <p>
   <strong>Project:</strong>
-  <%= @sprint.project %>
+  <%= @sprint.project.name%>
 </p>
 
 <%= link_to 'Edit', edit_sprint_path(@sprint) %> |
