--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -33,7 +33,7 @@
 
   <div class="field">
     <%= f.label :sprint_id %>
-    <%= f.text_field :sprint_id %>
+    <%= f.select :sprint_id, Sprint.all.collect {|sprint| [ sprint.name, sprint.id ] },{nclude_blank: true,prompt: 'Select Sprint'}, class: 'select2' %>
   </div>
 
   <div class="actions">
