adiconado class bootstrap para flash de notice e danger

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,9 +9,18 @@
   </head>
 
   <body>
-    
-    <p class="notice"><%= notice %></p>
-    <p class="alert"><%= alert %></p>
+      <% unless notice.nil? %>
+          <div class="alert alert-info fade in">
+            <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+            <strog><%= notice %></strong>
+          </div>
+        <% end %>
+        <% unless alert.nil? %>
+          <div class="alert alert-danger fade in">
+            <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+            <p ><%= alert %></p>
+          </div>    
+        <% end %>  
      <% if user_signed_in? %>
      	<div>
            <div>Signed in as... <%= current_user.email %></div>
