--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,6 +11,12 @@
  * It is generally better to create a new file per style scope.
  *
  */
+
 @import "bootstrap";
 @import "select2-bootstrap";
 @import "select2";
+
+body {
+  padding-top: 60px;
+}
+
