--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -1,33 +1,20 @@
 
-<h1>Projects</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Opening date</th>
-      <th>Closing date</th>
-      <th>Expected value</th>
-      <th>Expected value</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @projects.each do |project| %>
-      <tr>
-        <td><%= project.name %></td>
-        <td><%= project.opening_date %></td>
-        <td><%= project.closing_date %></td>
-        <td><%= project.expected_value %></td>
-        <td><%= link_to 'Show', project %></td>
-        <td><%= link_to 'Edit', edit_project_path(project) %></td>
-        <td><%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+<section class="search-results">
+  <header>
+    <h1 class="h3">Your Projects</h1>
+  </header>
+  <ol class="list-group">
+    <% @projects.each do |project|  %>
+      <li class="list-group-item  clearfix">
+        <h2><%= project.name %></h2>
+        <div class="pull-right ">
+          <small class='list-group-item list-group-item-info' >Opening Date: <%= project.opening_date.strftime('%y/%m/%Y')  %></small>
+          <small class='list-group-item list-group-item-info' >Closing date: <%= project.closing_date.strftime('%y/%m/%Y') %></small>
+        </div> 
+        <h5><%= link_to 'Show', project, class: 'btn btn-info' %> <%= link_to 'Edit', edit_project_path(project),class: 'btn btn-default' %> <%= link_to 'Destroy', project, method: :delete, data: { confirm: 'Are you sure?' },class: 'btn btn-danger' %></h5>
+      </li>
     <% end %>
-  </tbody>
-</table>
+  </ol>
+</section>
 
-<br>
-
-<%= link_to 'New Project', new_project_path %>
+<%= link_to 'New Project', new_project_path, :class => 'btn btn-success' %>
