--- a/app/views/projects/edit.html.erb
+++ b/app/views/projects/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing Project</h1>
+<div class="col-lg-8 center" >
 
-<%= render 'form', project: @project %>
+  <h1>Editing Project</h1>
 
-<%= link_to 'Show', @project %> |
-<%= link_to 'Back', projects_path %>
+  <%= render 'form', project: @project %>
+  <div class='pull-right' >
+    <%= link_to 'Show', @project, class: 'btn btn-info' %>
+    <%= link_to 'Back', projects_path, class: 'btn btn-default' %>
+  </div>
+</div>
