--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,5 +1,9 @@
-<h1>New Project</h1>
+<div class="col-lg-8 center" >
 
-<%= render 'form', project: @project %>
+  <h1>New Project</h1>
 
-<%= link_to 'Back', projects_path %>
+  <%= render 'form', project: @project %>
+  <div class='pull-right' >
+    <%= link_to 'Back', projects_path, class: 'btn btn-default' %>
+  </div>
+</div>
