--- a/app/views/sprints/edit.html.erb
+++ b/app/views/sprints/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing Sprint</h1>
+<div class="col-lg-8 center" >
 
-<%= render 'form', sprint: @sprint %>
+  <h1>Editing Sprint</h1>
 
-<%= link_to 'Show', @sprint %> |
-<%= link_to 'Back', sprints_path %>
+  <%= render 'form', sprint: @sprint %>
+  <div class='pull-right' >
+    <%= link_to 'Show', @sprint, class: 'btn btn-info' %>
+    <%= link_to 'Back', sprints_path,class: 'btn btn-default' %>
+  </div>
+</div>
