--- a/app/views/sprints/index.html.erb
+++ b/app/views/sprints/index.html.erb
@@ -1,33 +1,21 @@
 
-
-<h1>Sprints</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Opening date</th>
-      <th>Closing date</th>
-      <th>Project</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @sprints.each do |sprint| %>
-      <tr>
-        <td><%= sprint.name %></td>
-        <td><%= sprint.opening_date %></td>
-        <td><%= sprint.closing_date %></td>
-        <td><%= sprint.project.name %></td>
-        <td><%= link_to 'Show', sprint %></td>
-        <td><%= link_to 'Edit', edit_sprint_path(sprint) %></td>
-        <td><%= link_to 'Destroy', sprint, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+<section class="search-results">
+  <header>
+    <h1 class="h3">Your Sprints</h1>
+  </header>
+  <ol class="list-group">
+    <% @sprints.each do |sprint|  %>
+      <li class="list-group-item  clearfix">
+        <h2><%= sprint.name %></h2>
+        <h3><%= link_to sprint.project.name, sprint.project %></h3>
+        <div class="pull-right ">
+          <small class='list-group-item list-group-item-info' >Opening Date: <%= sprint.opening_date.strftime('%y/%m/%Y')  %></small>
+          <small class='list-group-item list-group-item-info' >Closing date: <%= sprint.opening_date.strftime('%y/%m/%Y') %></small>
+        </div>
+        <h5><%= link_to 'Show', sprint, class: 'btn btn-info' %> <%= link_to 'Edit', edit_sprint_path(sprint),class: 'btn btn-default' %> <%= link_to 'Destroy', sprint, method: :delete, data: { confirm: 'Are you sure?' },class: 'btn btn-danger' %></h5>
+      </li>
     <% end %>
-  </tbody>
-</table>
+  </ol>
+</section>
 
-<br>
-
-<%= link_to 'New Sprint', new_sprint_path %>
+<%= link_to 'New Sprint', new_sprint_path, class: 'btn btn-success' %>
