--- a/app/views/sprints/new.html.erb
+++ b/app/views/sprints/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New Sprint</h1>
+<div class="col-lg-8 center" >
 
-<%= render 'form', sprint: @sprint %>
+  <h1>New Sprint</h1>
 
-<%= link_to 'Back', sprints_path %>
+  <%= render 'form', sprint: @sprint %>
+
+  <%= link_to 'Back', sprints_path, class:'btn btn-default' %>
+</div>
