--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,3 +1,4 @@
+
 <%= form_for(task) do |f| %>
   <% if task.errors.any? %>
     <div id="error_explanation">
@@ -11,32 +12,33 @@
     </div>
   <% end %>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :title %>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, class: 'form-control'  %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :description %>
-    <%= f.text_field :description %>
+    <%= f.text_area :description, class: 'form-control'  %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :estimated_time %>
-    <%= f.time_select :estimated_time %>
+    <%= f.time_select :estimated_time, class: 'form-control'  %>
   </div>
 
-  <div class="field">
+  <div id="real_time" class="form-group">
     <%= f.label :real_time %>
-    <%= f.time_select :real_time %>
+    <%= f.time_select :real_time, class: 'form-control'  %>
   </div>
 
-  <div class="field">
+  <div class="form-group">
     <%= f.label :sprint_id %>
-    <%= f.select :sprint_id, current_user.sprints.all.collect {|sprint| [ sprint.name, sprint.id ] },{nclude_blank: true,prompt: 'Select Sprint'}, class: 'select2' %>
+    <%= f.select :sprint_id, current_user.sprints.all.collect {|sprint| [ sprint.name, sprint.id ] },{nclude_blank: true,prompt: 'Select Sprint'}, class: 'select2 form-control' %>
   </div>
 
-  <div class="actions">
-    <%= f.submit %>
+  <div class="form-group">
+    <%= f.submit 'Save', class: "btn btn-success" %>
   </div>
 <% end %>
+
