--- a/app/views/tasks/edit.html.erb
+++ b/app/views/tasks/edit.html.erb
@@ -1,6 +1,10 @@
-<h1>Editing Task</h1>
+<div class="col-lg-8 center" >
 
-<%= render 'form', task: @task %>
+   <h1>Editing Task</h1>
 
-<%= link_to 'Show', @task %> |
-<%= link_to 'Back', tasks_path %>
+   <%= render 'form', task: @task %>
+
+   <%= link_to 'Show', @task, class: 'btn btn-info' %> 
+   <%= link_to 'Back', tasks_path, class: 'btn btn-default' %>
+<div class="col-lg-8 center" >
+
