--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,35 +1,25 @@
 
 
-<h1>Tasks</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Estimated time</th>
-      <th>Real time</th>
-      <th>Sprint</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+<section class="search-results">
+  <header>
+    <h1 class="h3">Tasks</h1>
+  </header>
+  <ol class="list-group">
     <% @tasks.each do |task| %>
-      <tr>
-        <td><%= task.title %></td>
-        <td><%= task.description %></td>
-        <td><%= task.estimated_time %></td>
-        <td><%= task.real_time %></td>
-        <td><%= task.sprint %></td>
-        <td><%= link_to 'Show', task %></td>
-        <td><%= link_to 'Edit', edit_task_path(task) %></td>
-        <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+      <li class="list-group-item  clearfix">
+        <h2><%= task.title %></h2>
+        <h4><%= task.description %> <h4> 
+        <h4> <%=link_to task.sprint.name, task.sprint %>, <%= link_to task.sprint.project.name, task.sprint.project %></h4>
+        <div class="pull-right ">
+          <small class='list-group-item list-group-item-info' >Estimated Time: <%= task.estimated_time  %></small>
+          <small class='list-group-item list-group-item-info' >Real Time: <%= task.real_time  %></small>
+        </div>
+        <h5><%= link_to 'Show', task, class: 'btn btn-info' %> <%= link_to 'Edit', edit_task_path(task),class: 'btn btn-default' %> <%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' },class: 'btn btn-danger' %></h5>
+      </li>
     <% end %>
-  </tbody>
-</table>
+  </ol>
+</section>
 
-<br>
+<%= link_to 'New Task', new_task_path, class: 'btn btn-success' %>
 
-<%= link_to 'New Task', new_task_path %>
