--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,5 +1,8 @@
-<h1>New Task</h1>
+<div class="col-lg-8 center" >
+  
+  <h1>New Task </h1>
 
-<%= render 'form', task: @task %>
+  <%= render 'form', task: @task %>
 
-<%= link_to 'Back', tasks_path %>
+  <%= link_to 'Back', tasks_path, class: 'btn btn-default' %>
+</div>
