--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -1,29 +1,15 @@
 
 
-<p>
-  <strong>Title:</strong>
-  <%= @task.title %>
-</p>
+  <div class="panel panel-default">
+    <div class="panel-heading"> <%= @task.title %> </div>
+    <div class="panel-body">
+      <p> <strong> Description: </strong><%=  @task.description %> </p>
+      <p> <strong> Estimated Time: </strong><%= @task.estimated_time %></p>
+      <p> <strong> Real Time: </strong><%=  @task.real_time %></p>
+      <p> <strong> Sprint: </strong><%= @task.sprint.name %></p>
+    </div>
+  </div>
+ 
 
-<p>
-  <strong>Description:</strong>
-  <%= @task.description %>
-</p>
-
-<p>
-  <strong>Estimated time:</strong>
-  <%= @task.estimated_time %>
-</p>
-
-<p>
-  <strong>Real time:</strong>
-  <%= @task.real_time %>
-</p>
-
-<p>
-  <strong>Sprint:</strong>
-  <%= @task.sprint.name %>
-</p>
-
-<%= link_to 'Edit', edit_task_path(@task) %> |
-<%= link_to 'Back', tasks_path %>
+<%= link_to 'Edit', edit_task_path(@task), class: 'btn btn-info' %>
+<%= link_to 'Back', tasks_path, class: 'btn btn-default' %>
