Adicionado bootstrap as views de project, sprint e task

--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -15,7 +15,7 @@
      <div class="panel panel-default" > <div class="panel-heading"> Sprintis of this project </div>
         <div class="panel-body">
           <% @project.sprints.each do |sprint| %>
-            <p> <%= sprint.name %></p>
+            <p> <%= link_to sprint.name, sprint  %></p>
           <% end %>
        </div>
      </div>
