--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -18,12 +18,14 @@
 
   <div class="form-group">
     <%= f.label :opening_date %>
-    <%= f.date_select :opening_date, class: 'form-control' %>
+    <%= f.date_select :opening_date, {:order => [:day, :month, :year], :start_year => 1920, :end_year => 2100},
+    {:class => "select2 "}  %>
   </div>
 
   <div class="form-group">
     <%= f.label :closing_date %>
-    <%= f.date_select :closing_date, class: 'form-control' %>
+    <%= f.date_select :closing_date, {:order => [:day, :month, :year], :start_year => 1920, :end_year => 2100},
+    {:class => "select2 "} %>
   </div>
 
   <div class="form-group">
