--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -1,7 +1,7 @@
 
 <%= form_for(task) do |f| %>
   <% if task.errors.any? %>
-    <div id="error_explanation">
+    <div id="error_explanation" class = "alert alert-danger fade in">
       <h2><%= pluralize(task.errors.count, "error") %> prohibited this task from being saved:</h2>
 
       <ul>
@@ -24,12 +24,14 @@
 
   <div class="form-group">
     <%= f.label :estimated_time %>
-    <%= f.time_select :estimated_time, class: 'form-control'  %>
+    <%= f.time_select :estimated_time, {start_hour: 0, end_hour: 200},
+    {:class => "select2 "}   %>
   </div>
 
   <div id="real_time" class="form-group">
     <%= f.label :real_time %>
-    <%= f.time_select :real_time, class: 'form-control'  %>
+    <%= f.time_select :real_time, {start_hour: 0, end_hour: 200},
+    {:class => "select2 "}   %>
   </div>
 
   <div class="form-group">
