--- a/app/views/sprints/new.html.erb
+++ b/app/views/sprints/new.html.erb
@@ -4,5 +4,5 @@
 
   <%= render 'form', sprint: @sprint %>
 
-  <%= link_to 'Back', sprints_path, class:'btn btn-default' %>
+  <%= link_to 'Back', @sprint.project, class:'btn btn-default' %>
 </div>
