--- a/app/views/sprints/_form.html.erb
+++ b/app/views/sprints/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(sprint) do |f| %>
+<%= form_for([project, sprint]) do |f| %>
   <% if sprint.errors.any? %>
     <div id="error_explanation" class = "alert alert-danger fade in">
       <h2><%= pluralize(sprint.errors.count, "error") %> prohibited this sprint from being saved:</h2>
