--- a/app/views/sprints/new.html.erb
+++ b/app/views/sprints/new.html.erb
@@ -2,7 +2,7 @@
 
   <h1>New Sprint</h1>
 
-  <%= render 'form', sprint: @sprint %>
+  <%= render 'form', project: @project, sprint: @sprint %>
 
   <%= link_to 'Back', @sprint.project, class:'btn btn-default' %>
 </div>
