--- a/app/views/tasks/new.html.erb
+++ b/app/views/tasks/new.html.erb
@@ -1,8 +1,8 @@
 <div class="col-lg-8 center" >
-  
+
   <h1>New Task </h1>
 
-  <%= render 'form', task: @task %>
+  <%= render 'form', project: @project, sprint: @sprint,  task: @task %>
 
-  <%= link_to 'Back', tasks_path, class: 'btn btn-default' %>
+  <%= link_to 'Back', [@project,  @sprint], class: 'btn btn-default' %>
 </div>
