Adicionado politicas para tasks, e complementado as de projects e sprints Modiicado as respectivas views para refletirem as devidas mudanças evitando os botões que levam a actions que o usuario logado nao tem permissão

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,8 +26,10 @@
        <% if user_signed_in? %>
           <nav class="navbar navbar-default navbar-fixed-top">
   	    <div class="container">
+          <small> <%= current_user.name %> </small>
+          <% if policy(Project).index? %>
     	       <%= link_to 'Projects', projects_path, class:"btn btn-default navbar-btn"  %>
-
+          <% end %>
           <!--     <form class="navbar-form navbar-right">
                  <div class="form-group">
                    <input type="text" class="form-control" placeholder="Search">
