--- a/app/views/sprints/index.html.erb
+++ b/app/views/sprints/index.html.erb
@@ -13,11 +13,21 @@
           <small class='list-group-item list-group-item-info' >Opening Date: <%= sprint.opening_date.strftime('%y/%m/%Y')  %></small>
           <small class='list-group-item list-group-item-info' >Closing date: <%= sprint.opening_date.strftime('%y/%m/%Y') %></small>
         </div>
-        <h5><%= link_to 'Show', [ sprint.project, sprint], class: 'btn btn-info' %> <%= link_to 'Edit', edit_project_sprint_path(sprint.project, sprint),class: 'btn btn-default' %>
-          <%= link_to 'Destroy', [sprint.project, sprint], method: :delete, data: { confirm: 'Are you sure?' },class: 'btn btn-danger' %></h5>
+        <h5>
+          <% if policy(Sprint).show? %>
+            <%= link_to 'Show', [ sprint.project, sprint], class: 'btn btn-info' %>
+          <% end %>
+          <% if policy(Sprint).edit? %>
+            <%= link_to 'Edit', edit_project_sprint_path(sprint.project, sprint),class: 'btn btn-default' %>
+          <% end %>
+          <% if policy(Sprint).destroy? %>
+            <%= link_to 'Destroy', [sprint.project, sprint], method: :delete, data: { confirm: 'Are you sure?' },class: 'btn btn-danger' %>
+          <% end %>
+        </h5>
       </li>
     <% end %>
   </ol>
 </section>
-
-<%= link_to 'New Sprint', new_project_sprint_path, class: 'btn btn-success' %>
+<% if policy(Sprint).new? %>
+  <%= link_to 'New Sprint', new_project_sprint_path, class: 'btn btn-success' %>
+<% end %>
