--- a/app/views/sprints/show.html.erb
+++ b/app/views/sprints/show.html.erb
@@ -7,6 +7,7 @@
     </div>
  </div>
 
-
-<%= link_to 'Edit', edit_project_sprint_path(@sprint.project, @sprint), class: 'btn btn-info' %>
+<% if policy(Sprint).edit? %>
+  <%= link_to 'Edit', edit_project_sprint_path(@sprint.project, @sprint), class: 'btn btn-info' %>
+<% end %>
 <%= link_to 'Back', project_sprints_path(@sprint.project) , class: 'btn btn-default' %>
