--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,6 +1,3 @@
-
-
-
 <section class="search-results">
   <header>
     <h1 class="h3">Tasks</h1>
@@ -16,10 +13,18 @@
           <small class='list-group-item list-group-item-info' >Estimated Time: <%= task.estimated_time  %></small>
           <small class='list-group-item list-group-item-info' >Real Time: <%= task.real_time  %></small>
         </div>
-        <h5><%= link_to 'Show', [task.sprint.project, task.sprint, task], class: 'btn btn-info' %> <%= link_to 'Edit', edit_project_sprint_task_path(task.sprint.project, task.sprint, task),class: 'btn btn-default' %> <%= link_to 'Destroy', [task.sprint.project, task.sprint, task], method: :delete, data: { confirm: 'Are you sure?' },class: 'btn btn-danger' %></h5>
+        <h5><%= link_to 'Show', [task.sprint.project, task.sprint, task], class: 'btn btn-info' %>
+          <% if policy(Task).edit? %>
+            <%= link_to 'Edit', edit_project_sprint_task_path(task.sprint.project, task.sprint, task),class: 'btn btn-default' %>
+          <% end %>
+          <% if policy(Task).destroy? %>
+           <%= link_to 'Destroy', [task.sprint.project, task.sprint, task], method: :delete, data: { confirm: 'Are you sure?' },class: 'btn btn-danger' %>
+          <% end %>
+         </h5>
       </li>
     <% end %>
   </ol>
 </section>
-
-<%= link_to 'New Task', new_project_sprint_task_path, class: 'btn btn-success' %>
+<% if policy(Task).new? %>
+  <%= link_to 'New Task', new_project_sprint_task_path, class: 'btn btn-success' %>
+<% end %>  
