--- a/app/views/default/index.html.erb
+++ b/app/views/default/index.html.erb
@@ -11,7 +11,7 @@
            <%= link_to task.sprint.project.name, task.sprint.project %></h4>
         <div class="pull-right ">
           <small class='list-group-item list-group-item-info' >Estimated Time: <%= task.estimated_time  %></small>
-          <small class='list-group-item list-group-item-info' >Real Time: <%= task.real_time  %></small>
+          <small class='list-group-item list-group-item-info' > Time Spent: <%= task.time_spent  %></small>
         </div>
         <h5><%= link_to 'Show', [task.sprint.project, task.sprint, task], class: 'btn btn-info' %> <%= link_to 'Edit', edit_project_sprint_task_path(task.sprint.project, task.sprint, task),class: 'btn btn-default' %> <%= link_to 'Destroy', [task.sprint.project, task.sprint, task], method: :delete, data: { confirm: 'Are you sure?' },class: 'btn btn-danger' %></h5>
       </li>
