--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -21,17 +21,18 @@
     <%= f.label :description %>
     <%= f.text_area :description, class: 'form-control'  %>
   </div>
-
+  <div class="form-group">
+    <%= f.label :status %>
+    <%= f.select(:status, Task.status.options, {}, class: 'form-control') %>
+  </div>
   <div class="form-group">
     <%= f.label :estimated_time %>
-    <%= f.time_select :estimated_time, {start_hour: 0, end_hour: 200},
-    {:class => "select2 "}   %>
+    <%= f.number_field :estimated_time,   {:class => "form-control"}   %>
   </div>
 
-  <div id="real_time" class="form-group">
-    <%= f.label :real_time %>
-    <%= f.time_select :real_time, {start_hour: 0, end_hour: 200},
-    {:class => "select2 "}   %>
+  <div id="time_spent" class="form-group">
+    <%= f.label :time_spent %>
+    <%= f.number_field :time_spent,   {:class => "form-control"}   %>
   </div>
 
   <div class="form-group">
