--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -3,7 +3,7 @@
     <div class="panel-body">
       <p> <strong> Description: </strong><%=  @task.description %> </p>
       <p> <strong> Estimated Time: </strong><%= @task.estimated_time %></p>
-      <p> <strong> Real Time: </strong><%=  @task.real_time %></p>
+      <p> <strong> Time spent: </strong><%=  @task.time_spent %></p>
       <p> <strong> Sprint: </strong><%= @task.sprint.name %></p>
     </div>
   </div>
