--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -6,7 +6,8 @@
     <% @tasks.each do |task| %>
       <li class="list-group-item  clearfix">
         <h2><%= task.title %></h2>
-        <h4><%= task.description %> <h4>
+        <h4><%= task.description %> <h4><p>
+        <strong> Status: </strong><%=  task.status %> </p>
         <h4> <%=link_to task.sprint.name, [task.sprint.project,task.sprint] %>,
            <%= link_to task.sprint.project.name, task.sprint.project %></h4>
         <div class="pull-right ">
