--- a/app/views/tasks/show.html.erb
+++ b/app/views/tasks/show.html.erb
@@ -2,6 +2,7 @@
     <div class="panel-heading"> <%= @task.title %> </div>
     <div class="panel-body">
       <p> <strong> Description: </strong><%=  @task.description %> </p>
+      <p> <strong> Status: </strong><%=  @task.status %> </p>
       <p> <strong> Estimated Time: </strong><%= @task.estimated_time %></p>
       <p> <strong> Time spent: </strong><%=  @task.time_spent %></p>
       <p> <strong> Sprint: </strong><%= @task.sprint.name %></p>
