--- a/app/views/sprints/index.html.erb
+++ b/app/views/sprints/index.html.erb
@@ -10,8 +10,8 @@
         <h3><%= link_to sprint.project.name, sprint.project %></h3>
          <p >Number of Tasks : <%= sprint.tasks.size  %></p>
         <div class="pull-right ">
-          <small class='list-group-item list-group-item-info' >Opening Date: <%= sprint.opening_date.strftime('%y/%m/%Y')  %></small>
-          <small class='list-group-item list-group-item-info' >Closing date: <%= sprint.opening_date.strftime('%y/%m/%Y') %></small>
+          <small class='list-group-item list-group-item-info' >Opening Date: <%= sprint.opening_date  %></small>
+          <small class='list-group-item list-group-item-info' >Closing date: <%= sprint.opening_date %></small>
         </div>
         <h5>
           <% if policy(Sprint).show? %>
