--- a/app/views/default/index.html.erb
+++ b/app/views/default/index.html.erb
@@ -7,6 +7,7 @@
       <li class="list-group-item  clearfix">
         <h2><%= task.title %></h2>
         <h4><%= task.description %> <h4>
+        <strong> Status: </strong><%=  task.status %> </p>
         <h4> <%=link_to task.sprint.name, [task.sprint.project,task.sprint] %>,
            <%= link_to task.sprint.project.name, task.sprint.project %></h4>
         <div class="pull-right ">
